[package]
name = "z3jit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
jobs = 1

[profile.dev]
codegen-units = 2
[profile.release]
codegen-units = 2
[profile.test]
codegen-units = 2

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
petgraph = "0.6.0"
sorted-vec = "0.8.0"
clap = "3.0.10"
itertools = "0.10.3"
rand = "0.8.4"

z3 = { git = "https://github.com/Lukas-Dresel/z3.rs.git", branch = "feat/z3_information_extraction" }

inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
quanta = "0.10.1"
